--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tbody>
       <tr>
-        <td><img src="https://github.com/mmishra086/DIVHIT_TECHNOLOGIES/blob/main/Imges/Profile.jpg" alt="Divhit Technolgies for technical transformation"></td>
+        <td><img src="https://github.com/mmishra086/DIVHIT_TECHNOLOGIES/blob/main/Imges/Profile.jpg?raw=true" alt="Divhit Technolgies for technical transformation"></td>
         <td>
           <h1>Mohit Mishra</h1>
           <h1>Divya Mishra</h1>
